--- a/source/.test/TestRunner.Testing/testrunner.testing.csproj
+++ b/source/.test/TestRunner.Testing/testrunner.testing.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <RootNamespace>TestRunner.Testing</RootNamespace>
@@ -12,14 +12,15 @@
   <ItemGroup>
     <ProjectReference Include="../../TestRunner/mindforge.testrunner.csproj" />
 
-    <Using Include="System.Text" />
-    <Using Include="System.Diagnostics" />
-    <Using Include="Moq" />
-    <Using Include="MindForge.TestRunner.UnitTesting" />
-  </ItemGroup>
+    <Reference Include="../../../lib/FakeItEasy.dll" />
 
-  <ItemGroup>
-    <PackageReference Include="Moq" Version="4.20.72" />
+    <Using Include="System.Text" />
+    <Using Include="System.Text.Json" />
+    <Using Include="System.Diagnostics" />
+    <Using Include="FakeItEasy" />
+    <Using Include="MindForge.TestRunner.Core" />
+    <Using Include="MindForge.TestRunner.Logging" />
+    <Using Include="MindForge.TestRunner.UnitTesting" />
   </ItemGroup>
 
 </Project>
