--- a/source/TestRunner/mindforge.testrunner.csproj
+++ b/source/TestRunner/mindforge.testrunner.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>disable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -14,6 +14,7 @@
     <Using Include="System.Text" />
     <Using Include="System.Xml.Linq" />
     <Using Include="System.Reflection" />
+    <Using Include="System.Collections" />
     <Using Include="System.Diagnostics" />
     
     <Using Include="MindForge.TestRunner.Logging" />
