--- a/source/TestRunner/mindforge.testrunner.csproj
+++ b/source/TestRunner/mindforge.testrunner.csproj
@@ -7,6 +7,7 @@
     <Nullable>disable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>MindForge.TestRunner</RootNamespace>
+    <GenerateRuntimeConfigurationFiles>true</GenerateRuntimeConfigurationFiles>
   </PropertyGroup>
 
   <ItemGroup>
