--- a/source/TestRunner/mindforge.testrunner.csproj
+++ b/source/TestRunner/mindforge.testrunner.csproj
@@ -14,6 +14,7 @@
     <Using Include="System.IO" />
     <Using Include="System.Text" />
     <Using Include="System.Xml.Linq" />
+    <Using Include="System.Text.Json" />
     <Using Include="System.Reflection" />
     <Using Include="System.Collections" />
     <Using Include="System.Diagnostics" />
